# raft-rs

./: Cargo.toml  README.md  flake.nix
scripts/: test-cluster.sh
src/: client_api.rs  cluster.rs  command.rs  file_storage.rs  kv.rs  lib.rs  main.rs  node.rs  runtime.rs  server.rs  state.rs  storage.rs  transport.rs  types.rs
src/types/: log.rs  message.rs  mod.rs  primitives.rs
