[package]
name = "raft"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "2"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }

[dev-dependencies]
proptest = "1"
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
